--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
+    
 </head>
 <body>
-  <h>
-    Please open the console window to see the output :)
-  </h>
-    <script src="calc.js"></script>
+    <nav class="above">
+        <div class="title">
+            <h1>This Calculator is made by Rudransh Srivastav</h1>
+        </div>
+    </nav>
+    <nav class="below">
+        <div class="text">
+            <t><b>Please open the console window to see the output</b></t>
+        </div>
+    </nav>
+    <div class="js-text">
+        <t2><b>This Calculator is made in javascript</b></t2>
+    </div>
+    <div class="js">
+        <img src="https://docs.y8.com/images/y8_layout/javascript.png" alt="javascript-logo">
+    </div>
+
+    <nav class="javascript">
+        <script src="func_calc.js"></script>
+    </nav>
+
+    <nav class="reload">
+        <h3>Reload the page to use the calculator again!<b></b></h3>
+        <h4><b>OR</b></h4>
+        <h5>Click This Button below</h5>
+    </nav>
+    <nav class="js-reload">
+        <button onClick="window.location.reload();">Reload Page</button>
+    </nav>
+
 </body>
 </html>
