--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <nav class="javascript">
-        <script src="func_calc.js"></script>
+        <script src="calc.js"></script>
     </nav>
 
     <nav class="reload">
