--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="above">
         <div class="title">
-            <h1>This Calculator is made by Rudransh Srivastav</h1>
+            <h1>This Calculator is made by BiscuitButB</h1>
         </div>
     </nav>
     <nav class="below">
